; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_hostip4.c_Curl_getaddrinfo.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_hostip4.c_Curl_getaddrinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@.str = private unnamed_addr constant [35 x i8] c"Curl_ipv4_resolve_r failed for %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @Curl_getaddrinfo(%struct.connectdata* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.connectdata*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  store i32* null, i32** %9, align 8
  %10 = load i32*, i32** %8, align 8
  store i32 0, i32* %10, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32* @Curl_ipv4_resolve_r(i8* %11, i32 %12)
  store i32* %13, i32** %9, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %22, label %16

16:                                               ; preds = %4
  %17 = load %struct.connectdata*, %struct.connectdata** %5, align 8
  %18 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @infof(i32 %19, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %20)
  br label %22

22:                                               ; preds = %16, %4
  %23 = load i32*, i32** %9, align 8
  ret i32* %23
}

declare dso_local i32* @Curl_ipv4_resolve_r(i8*, i32) #1

declare dso_local i32 @infof(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
